# gulliver

./: .dockerignore  .gitignore  .python-version  Dockerfile  README.rst  browse_zodb.py  development.ini  genindex.html  index.html  objects.inv  production.ini  py-modindex.html  pyproject.toml  searchindex.js  setup.cfg
_sources/: index.rst.txt
_static/: README
docs/: conf.py  syncdocs.sh
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/source/: conf.py
docs/source/_templates/: README
docs/source/modules/: gulliver.rst  models.rst  views.rst
gulliver/: __init__.py  __init__.pyi  models.py  models.pyi  views.py  views.pyi
gulliver/templates/: home.pt
modules/: gulliver.html  models.html  views.html
tests/: test_gulliver.py  test_gulliver_functional.py  test_models.py  test_views.py  testing.ini
volumes/: README.rst
