[tool.poetry]
name = "gulliver"
version = "0.1.0"
description = ""
license = "GPL-3.0"
authors = ["H. Turgut Uyar <uyar@tekir.org>", "Barbaros Günay"]
readme = "README.rst"
homepage = "https://modest-proposal.github.io/gulliver/"
repository = "https://github.com/modest-proposal/gulliver"

[tool.poetry.dependencies]
python = "^3.6"
pyramid = "^1.10"
pyramid_chameleon = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.6"
sphinx = "^1.8"
sphinx_rtd_theme = "^0.4.2"
waitress = "^1.1"
webtest = "^2.0"

[tool.black]
line-length = 96

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{37,36}, style, docs
skipsdist = True

[testenv]
deps =
    pytest
commands =
    {posargs:pytest}

[testenv:style]
deps =
    flake8
commands =
    flake8 gulliver

[testenv:docs]
changedir = docs/
deps =
    sphinx
    sphinx_rtd_theme
commands =
    sphinx-build -b html -d _build/doctrees/ ./ _build/html/
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
