[tool.poetry]
name = "gulliver"
version = "0.1.0"
description = ""
readme = "README.rst"

authors = ["H. Turgut Uyar <uyar@tekir.org>", "Barbaros Günay"]
license = "GPL-3.0"

url = "https://modest-proposal.github.io/gulliver/"
documentation = "https://modest-proposal.github.io/gulliver/"
repository = "https://github.com/modest-proposal/gulliver"

[tool.poetry.dependencies]
python = "^3.6"
pyramid = "^1.10"
pyramid_chameleon = "^0.3"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
webtest = "^2.0"
waitress = "^1.1"
flake8 = "^3.6"
flake8-isort = "^2.6"
flake8-docstrings = "^1.3"
sphinx = "^1.8"
sphinx_rtd_theme = "^0.4.2"
pygenstub = "^1.2"

[tool.poetry.plugins."paste.app_factory"]
"main" = "gulliver:create_app"

[tool.black]
line-length = 96

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37, py36, style, docs
skipsdist = True

[testenv]
whitelist_externals = poetry
skip_install = true
commands =
    poetry install -v
    poetry run {posargs:pytest}

[testenv:style]
whitelist_externals = poetry
skip_install = true
commands =
    poetry install -v
    poetry run flake8 gulliver

[testenv:docs]
whitelist_externals = poetry
skip_install = true
changedir = docs/
commands =
    poetry install -v
    poetry run sphinx-build -b html -d build/doctrees/ source/ build/html/
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
